<resources>
    <string name="app_name">Athletae</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="welcome_text">Welcome to Athletae</string>
    <string name="email_hint">Your email...</string>
    <string name="pass_hint">Password....</string>
    <string name="login_logo">Welcome to Athletae</string>
    <string name="login_btn_text">Login to account</string>
    <string name="login_reg_btn_text">Need a new Account?</string>
    <string name="action_search_text">Search</string>
    <string name="action_settings_text">Account Settings</string>
    <string name="action_logout_text">Logout</string>
    <string name="reg_logo_text">Create a new account</string>
    <string name="reg_logo_text2" />
    <string name="reg_logo_text3">Athletae</string>
    <string name="reg_btn_text">Create new Account</string>
    <string name="reg_login_text">Already have an Account?</string>
    <string name="reg_pass_text">Password...</string>
    <string name="reg_confirm_password_text">Confirm Password...</string>
    <string name="setup_name_hint">Your Name ...</string>
    <string name="setup_btn_name_text">Save Account Settings</string>
    <string name="post_desc_hint">Add Description</string>
    <string name="new_post_btn_hint">Post Blog</string>
    <string name="post_image_hint">Unknown</string>
    <string name="image_view">nothing</string>
    <string name="bottom_home_text">Home</string>
    <string name="bottom_notification_text">Notifications</string>
    <string name="bottom_ac_text">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="desc_txt">Description</string>
    <string name="post_img">Post Image</string>
    <string name="delete_btn_text">X</string>
    <string name="setup_city_hint">Your city ...</string>
    <string name="post_city_hint">Add location here ...</string>
</resources>
